Tidy up conf files;

--- a/codegen/java/java.conf
+++ b/codegen/java/java.conf
@@ -14,12 +14,13 @@
      "scmConnection": "",
      "scmDeveloperConnection": "",
      "scmUrl": "",
-     "developerName": "OnepageCRM developer",
+     "developerName": "OnePageCRM Developer",
      "developerEmail": "developer@xap.ie",
-     "developerOrganization": "OnepageCRM",
+     "developerOrganization": "OnePageCRM",
      "developerOrganizationUrl": "https://www.onepagecrm.com",
      "licenseName": "",
      "licenseUrl": "https://www.onepagecrm.com/api-use",
-     "fullJavaUtil": true
+     "serializableModel": true,
+     "fullJavaUtil": true,
+     "dateLibrary": "threetenbp"
 }
-
